further spacing corrections

--- a/styles/promotions.css
+++ b/styles/promotions.css
@@ -1,10 +1,3 @@
-*{
-    /* border: 1px solid red; */
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-
 /* mobile view */
 @media only screen and (max-width: 700px){
     .promo-container{
@@ -34,7 +27,7 @@
        font-weight: 600;
    }
    .school img{
-    width: 300px;
+    width: 200px;
     height: 200px;
     margin: auto;
     display: block;
@@ -46,6 +39,7 @@
     .promo-container{
         display: flex;
         padding: 20px;
+        margin: 20px;
     }
     #promo{
         padding: 40px;
@@ -53,23 +47,24 @@
      }
     h1.title{
         text-align: left;
-        padding-top: 40px;
         margin-bottom: 20px;
     }
     #promo h2{
-        padding: 40px 0;
+        padding: 30px 0;
+        margin: 0;
     }
     .noticeMe{
         font-size: larger;
         font-weight: 600;
     }
     p{
-        line-height: 2;
+        line-height: 1;
         padding-left: 2px;
     }
     .school img{
-        width: 400px;
-        height: 400px;
+        width: 300px;
+        height: 300px;
+        margin-top: 50px;
     }
     .school{
         flex: 1;
